--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <version>3.0.0-M7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.20.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
